// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextRow renders with new posts 1`] = `
<li
  data-stylename="s.contextRow"
>
  <Link
    data-stylename="s.contextRowLink"
    title="Foomunity"
    to="/groups/foo"
  >
    <div
      data-stylename="s.contextRowAvatar"
      style={
        Object {
          "backgroundImage": "url(/foo.png)",
        }
      }
    />
    <span
      data-stylename="s.group-name"
    >
      Foomunity
    </span>
  </Link>
</li>
`;

exports[`ContextRow renders with zero new posts 1`] = `
<li
  data-stylename="s.contextRow"
>
  <Link
    data-stylename="s.contextRowLink"
    title="Foomunity"
    to="/groups/foo"
  >
    <div
      data-stylename="s.contextRowAvatar"
      style={
        Object {
          "backgroundImage": "url(/foo.png)",
        }
      }
    />
    <span
      data-stylename="s.group-name"
    >
      Foomunity
    </span>
  </Link>
</li>
`;

exports[`Drawer renders with a current group 1`] = `
<div
  data-stylename="s.groupDrawer"
>
  <div
    data-stylename="s.currentGroup"
  >
    <div
      data-stylename="s.hyloLogoBar"
    >
      <img
        src="/hylo.svg"
        width="50px"
      />
      <Icon
        data-stylename="s.closeDrawer"
        name="Ex"
      />
    </div>
    <Logo
      group={
        Object {
          "avatarUrl": "/foo.png",
          "id": "11",
          "name": "Foomunity",
          "newPostCount": 0,
          "slug": "foo",
        }
      }
    />
  </div>
  <div>
    <ul
      data-stylename="s.groupsList"
    />
    <ul
      data-stylename="s.groupsList"
    >
      <li
        data-stylename="s.sectionTitle s.sectionTitleSeparator"
      >
        My Groups
      </li>
      <ContextRow
        group={
          Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "newPostCount": 0,
            "slug": "foo",
          }
        }
        key="11"
      />
      <ContextRow
        group={
          Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "newPostCount": 7,
            "slug": "bar",
          }
        }
        key="22"
      />
    </ul>
    <div
      data-stylename="s.newGroup"
    >
      <Button
        color="white"
        data-stylename="s.newGroupBtn"
        label="Start a Group"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer renders without a current group 1`] = `
<div
  data-stylename="s.groupDrawer"
>
  <div
    data-stylename="s.currentGroup"
  >
    <div
      data-stylename="s.hyloLogoBar"
    >
      <img
        src="/hylo.svg"
        width="50px"
      />
      <Icon
        data-stylename="s.closeDrawer"
        name="Ex"
      />
    </div>
    <Logo />
  </div>
  <div>
    <ul
      data-stylename="s.groupsList"
    />
    <ul
      data-stylename="s.groupsList"
    >
      <li
        data-stylename="s.sectionTitle s.sectionTitleSeparator"
      >
        My Groups
      </li>
      <ContextRow
        group={
          Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "newPostCount": 0,
            "slug": "foo",
          }
        }
        key="11"
      />
      <ContextRow
        group={
          Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "newPostCount": 7,
            "slug": "bar",
          }
        }
        key="22"
      />
    </ul>
    <div
      data-stylename="s.newGroup"
    >
      <Button
        color="white"
        data-stylename="s.newGroupBtn"
        label="Start a Group"
      />
    </div>
  </div>
</div>
`;
